# p96-rpa-prover

./: .flake8  .gitignore  .gitkeep  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  ssh-key-2026-03-13 1.key  test_browser.py
config/: __init__.py  settings.py
data/: .gitkeep
docs/: ARCHITECTURE.md  QUICKSTART.md  VALIDACAO_PIPELINE.md  prompt_modelo_dimensional_fluxo_caixa.md
scripts/: extract_and_upload_prover.py  extract_and_upload_prover_ipp.py  listar_arquivos_bronze.py  load_gold_to_bigquery.py  pipeline_completo_end_to_end.py  process_gold_layer.py  process_silver_layer.py  validar_arquivos_mais_recentes_bronze.py
src/: __init__.py
src/database/: __init__.py  bigquery_loader.py
src/etl/: __init__.py  bigquery_loader.py  bronze_to_silver.py  gold_processor.py  silver_processor.py  silver_to_gold.py
src/rpa/: __init__.py  prover_scraper.py
src/storage/: __init__.py  gcs_uploader.py
src/utils/: exceptions.py  logger.py
tests/: __init__.py  test_prover_scraper.py
